--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,8 @@ spring:
           auto: create-drop
         show_sql: true
         format_sql: true
+        highlight_sql: true
+
+logging:
+  level:
+    root: info
